# Cooperating-Robots

./: .gitignore  LOG.md  README.md
camera_test/: CMakeCache.txt  CMakeLists.txt  Makefile  camera.cpp  camera_test  cmake_install.cmake
catkin_ws/devel/: .catkin  .rosinstall  local_setup.sh  setup.sh
catkin_ws/devel/include/camera1394/: Camera1394Config.h  GetCameraRegistersRequest.h  GetCameraRegistersResponse.h  SetCameraRegistersRequest.h  SetCameraRegistersResponse.h
catkin_ws/devel/include/videre_stereo_cam/: VidereStereoCamConfig.h
catkin_ws/devel/lib/camera1394/: camera1394_node
catkin_ws/devel/lib/openni_tracker/: openni_tracker
catkin_ws/devel/lib/pkgconfig/: camera1394.pc  kinect.pc  openni_tracker.pc  ros_kinect_interface.pc  skeleton_tracking.pc  videre_cam_interface.pc  videre_stereo_cam.pc
catkin_ws/devel/lib/ros_kinect_interface/: ros_kinect_interface_node  subscriber_node
catkin_ws/devel/lib/videre_cam_interface/: extract_lines  subscriber_cam_node
catkin_ws/devel/lib/videre_stereo_cam/: videre_stereo_node
catkin_ws/src/ros_kinect_interface/: CMakeLists.txt
catkin_ws/src/ros_kinect_interface/src/: subscriber.cpp
catkin_ws/src/skeleton_tracking/: CMakeLists.txt  package.xml
catkin_ws/src/videre_cam_interface/: CMakeLists.txt  ost.yaml  package.xml
installation/: .gitignore  README.md  install_all.sh  install_opencv.sh  install_openni_sensor_kinect.sh  install_ros_kinetic.sh
installation/installation_test/: .gitignore  CMakeCache.txt  CMakeLists.txt  Kinect_Test  Kinect_Test.cpp  Makefile  cmake_install.cmake
(+892 files in other folders)
